feat(api): member lookup by username and added social media head position in db schema
